- Tracker: Phased out video output and frame saving (used to show the detection steps on each frame). Both tasks are now handled by the viewer. Caveat: the viewer only allows live viewing; it doesn't offer the option to export a video file (yet?).
- Settings:
  * Changed settings format. Settings dictionaries should now be in flattened form. For example, {'bkg':{'contrast_factor':5}} becomes {'bkg.contrast_factor':5}. This also applies to settings files, whether spreadsheets or text files. The unflattened form is still used internally, but only internally.
  * Renamed tracker option "bkgSub_options" to "bkg" and removed video output options.
  * Merged excel settings and settings tweaks. Both are now handled by "utils.load_filtered_settings".
  * Moved settings files to "settings/".

--- a/track.ipynb
+++ b/track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,99 +23,35 @@
     "import cv2\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import flatten_dict\n",
     "\n",
-    "# import tracker\n",
-    "# reload(tracker.utils)\n",
-    "# from tracker import utils\n",
-    "# reload(tracker.tank)\n",
-    "# from tracker.tank import Tank\n",
-    "# reload(tracker.tracker)\n",
-    "# from tracker.tracker import Tracker\n",
-    "\n",
-    "utils.reset_logging()\n",
-    "utils.add_log_stream(sys.stdout)\n",
-    "handler = logging.root.handlers[-1]\n",
-    "handler.terminator = ''\n",
-    "handler.setFormatter(logging.Formatter('\\r'+' '*200+'\\r     %(message)s'))"
+    "import tracker\n",
+    "reload(tracker.utils)\n",
+    "from tracker import utils\n",
+    "reload(tracker.tank)\n",
+    "from tracker.tank import Tank\n",
+    "reload(tracker.tracker)\n",
+    "from tracker.tracker import Tracker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "default_settings = dict(\n",
-    "    # Background subtraction.\n",
-    "    bkgSub_options   = dict( n_training_frames = 200,   # number of frames used to compute background\n",
-    "                             t_start = 0, t_end = 1200, # time range used to compute background\n",
-    "                             contrast_factor = 5,       # post-subtraction contrast enhancement factor\n",
-    "                             secondary_subtraction = True, \n",
-    "                             secondary_factor = 2       # frame = frame-secondary_factor*secondary_background\n",
-    "                           ),\n",
-    "    t_start          = 0,     # Time at which to start tracking, in seconds.\n",
-    "    t_end            = 1200,  # Time at which to end tracking, in seconds.\n",
-    "    \n",
-    "    # Contour detection.\n",
-    "    n_blur           =  7,    # square-root of n-pixels for threshold blurring\n",
-    "    block_size       = 31,    # contour block size\n",
-    "    threshold_offset = 13,    # threshold offset for contour-finding\n",
-    "    min_area         = 25,    # minimum area for detection\n",
-    "    max_area         = 800,   # maximum area for detection\n",
-    "    ideal_area       = 150,   # ideal area to rank contours in first frame (default=(min_area+max_area)/2)\n",
-    "    max_aspect       = 15,    # maximum aspect ratio for detection\n",
-    "    ideal_aspect     = 3,     # ideal aspect ratio to rank contours in first frame (default=max_aspect/2)\n",
-    "    area_penalty     = 0.5,   # weight of area change when connecting fish across frames\n",
-    "    n_extra          = 2,     # number of extra contours to keep track of\n",
-    "    morph_transform  = [], \n",
-    "#     morph_transform  = [(cv2.MORPH_OPEN,2),(cv2.MORPH_CLOSE,2)], \n",
-    "#     morph_transform  = [(cv2.MORPH_CLOSE,20),(cv2.MORPH_OPEN,3)], \n",
-    "#     morph_transform  = [(cv2.MORPH_DILATE,5),(cv2.MORPH_OPEN,8)], \n",
-    "                              # sequence of morphological operations to perform\n",
-    "                              # on thresholded image before extracting contours.\n",
-    "    reversal_threshold = 0.5, # average frame-to-frame displacement against the director \n",
-    "                              # over the last few frames to trigger a reversal. \n",
-    "    \n",
-    "    # Visualization.\n",
-    "    save_video       = False, \n",
-    "    # What information to draw on the tracking output video.\n",
-    "    video_output_options = dict( tank=True, points=False, directors=True, \n",
-    "                                 extra_points=True, timestamp=True, \n",
-    "                                 contours=True, contour_color=(100,255,0), \n",
-    "                                 contour_thickness=1 )\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "2\n",
-      "    Pa_sat_7dpf_GroupA_n2a_202104171441\n",
-      "    sf_wed_7dpf_groupA_n2_202104141325\n"
-     ]
-    }
-   ],
-   "source": [
-    "''' Select input files to track and an output directory for each. '''\n",
+    "''' Select an output directory, a set of input files (videos to track), \n",
+    "    and a settings file. '''\n",
     "\n",
-    "# tracking_dir = '../tracking/full_21-02-12'\n",
     "tracking_dir = 'output'\n",
     "\n",
-    "# input_files = sorted(glob('../raw_videos/*.avi'))\n",
     "input_files = sorted(glob('../raw_videos2/videos/*.avi'))\n",
-    "# input_files = [ '../raw_videos/Pa_Fri_43dpf_GroupC_n5_20200711_1550.avi' ]\n",
     "# input_files = [ '../raw_videos2/videos/pa_wed_28dpf_groupA_n5_202104281846.avi' ]\n",
+    "input_files = [input_files[i] for i in [0,2]]\n",
     "\n",
-    "print(len(input_files))\n",
+    "filtered_settings = utils.load_filtered_settings('settings/larval-schooling-2.xlsx')\n",
     "\n",
-    "input_dict = {}\n",
+    "input_list = []\n",
     "for input_file in input_files:\n",
     "#     print(input_file)\n",
     "    d,fn       = os.path.split(input_file)\n",
@@ -123,84 +59,77 @@
     "    output_dir = os.path.join(tracking_dir,fn)\n",
     "    n_ind      = int(re.findall('_n(\\d+)[^\\d]*_',fn)[0])\n",
     "    \n",
-    "    # If a repaired version exists, use that instead.\n",
-    "    repaired_file = os.path.join(d,'repaired',fn+'-repaired'+ext)\n",
-    "    input_file = repaired_file if os.path.exists(repaired_file) else input_file\n",
+    "#     # If a repaired version exists, use that instead.\n",
+    "#     repaired_file = os.path.join(d,'repaired',fn+'-repaired'+ext)\n",
+    "#     input_file = repaired_file if os.path.exists(repaired_file) else input_file\n",
     "    \n",
-    "    # If a trial file already exists, skip.\n",
-    "    if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
-    "        continue\n",
+    "#     # If a trial file already exists, skip.\n",
+    "#     if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
+    "#         continue\n",
     "    \n",
-    "    input_dict[input_file] = {}\n",
-    "    input_dict[input_file].update(default_settings)\n",
-    "    input_dict[input_file].update(dict( output_dir=output_dir, \n",
-    "                                        n_ind=n_ind, trial_name=fn ))\n",
+    "    settings = utils.apply_filtered_settings(filtered_settings, fn)\n",
+    "    settings.update( input_video=input_file, output_dir=output_dir, \n",
+    "                     n_ind=n_ind, trial_name=fn )\n",
+    "    input_list.append(settings)\n",
     "\n",
-    "# Function to edit a pre-existing nested dictionary entry from\n",
-    "# a dot-separated key list (used to apply settings variants).\n",
-    "def set_nested_dict(d, key_list, val):\n",
-    "    if len(key_list)==1:\n",
-    "        d[key_list[0]] = val\n",
-    "    else:\n",
-    "        set_nested_dict(d[key_list[0]],key_list[1:],val)\n",
-    "        \n",
-    "# Load settings variants.\n",
-    "df = pd.read_excel('settings_tweaks.xlsx')\n",
-    "for i,row in df.iterrows():\n",
-    "    trial,par,val = row[:3]\n",
-    "    for f,d in input_dict.items():\n",
-    "        if fnmatch(d['trial_name'].lower(),trial.lower()):\n",
-    "            set_nested_dict(input_dict[f], par.split('.'), val)\n",
+    "print(f'{len(input_list)}/{len(input_files)}')\n",
     "\n",
-    "print(len(input_dict))\n",
-    "\n",
-    "for f,D in input_dict.items():\n",
-    "    print('   ',D['trial_name'])"
+    "# if len(input_dict)<10:\n",
+    "for D in input_list:\n",
+    "    print(D['trial_name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Video capture released                                                                                                                                                                             Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "''' Create output directories. Compute backgrounds. '''\n",
+    "import tracker\n",
+    "reload(tracker.utils)\n",
+    "from tracker import utils\n",
+    "reload(tracker.tank)\n",
+    "from tracker.tank import Tank\n",
+    "reload(tracker.tracker)\n",
+    "from tracker.tracker import Tracker\n",
+    "\n",
+    "''' Create output directories. Import or compute backgrounds. '''\n",
     "\n",
     "if not os.path.exists(tracking_dir):\n",
     "    os.mkdir(tracking_dir)\n",
     "\n",
-    "\n",
     "# If not None, look for pre-existing backgrounds in bkg_dir.\n",
-    "bkg_dir = os.path.relpath(os.path.join(tracking_dir,'../full_21-01-17')) # \n",
-    "# bkg_dir = '/home/yaouen/Desktop/larval_schooling on trilab_data/tracking/full_21-01-17'\n",
+    "bkg_dir = os.path.relpath(os.path.join(tracking_dir,'../full_21-01-17')) # None # \n",
     "\n",
-    "\n",
-    "for input_file,D in input_dict.items():\n",
-    "    logging.info(input_file)\n",
-    "    tracker = Tracker(input_video=input_file, **D)\n",
+    "for D in input_list:\n",
+    "    utils.overprint(D['trial_name'])\n",
+    "#     print(D['trial_name'])\n",
+    "    tracker = Tracker(**D)\n",
+    "    \n",
     "    # Create output directory.\n",
     "    tracker.init_directory()\n",
     "    tracker.save_settings()\n",
+    "    \n",
     "    # Create a link to the input video in the output directory.\n",
-    "    input_shortcut = os.path.join(D['output_dir'],'raw'+ext)\n",
-    "#     if not 'windows' in platform.system().lower() and not os.path.exists(input_shortcut):\n",
-    "    try:\n",
-    "        os.symlink(os.path.relpath(input_file,D['output_dir']),input_shortcut)\n",
-    "    except:\n",
-    "        pass\n",
+    "    # In windows, this requires special privileges.\n",
+    "    # Instead, write the path to the video in a text file which\n",
+    "    # the viewer can use to locate the video.\n",
+    "    input_link     = os.path.join(D['output_dir'],'raw'+ext)\n",
+    "    relative_input = os.path.relpath(input_file, D['output_dir'])\n",
+    "    if not os.path.exists(input_link):\n",
+    "        try:\n",
+    "            input_link = os.path.join(D['output_dir'], 'raw'+ext)\n",
+    "            os.symlink(relative_input, input_link)\n",
+    "        except:\n",
+    "#         if 'windows' in platform.system().lower():\n",
+    "            input_link = os.path.join(D['output_dir'], 'raw.txt')\n",
+    "            with open(input_link, 'r') as fh:\n",
+    "                fh.write(relative_input)\n",
     "    \n",
     "    # If background file(s) already exist, don't do anything.\n",
-    "    b  = D['bkgSub_options']['secondary_subtraction']\n",
+    "    b  = D['bkg.secondary_subtraction']\n",
     "    f1 = os.path.join(tracker.output_dir,'background.npz')\n",
     "    f2 = os.path.join(tracker.output_dir,'background2.npz')\n",
     "    if os.path.exists(f1) and ( (not b) or os.path.exists(f2) ):\n",
@@ -213,41 +142,30 @@
     "                f1 = os.path.join(d,f'background{i}.{e}')\n",
     "                f2 = os.path.join(D['output_dir'],f'background{i}.{e}')\n",
     "                shutil.copy2(f1,f2)\n",
-    "#         continue\n",
     "    except:\n",
     "        pass\n",
-    "#         %tb\n",
     "    # Otherwise, compute background.\n",
     "    tracker.init_video_input()\n",
     "    tracker.init_background()\n",
     "    tracker.init_secondary_background()\n",
     "    tracker.release()\n",
     "\n",
-    "print('Done')"
+    "print('\\nDone')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Tank detection complete.                                                                                                                                                                           Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "''' Trace tanks. '''\n",
     "\n",
     "# If not None, look for pre-existing tanks in tank_dir.\n",
-    "# tank_dir = None # os.path.join(tracking_dir,'../tank-only_20-09-25') # \n",
-    "tank_dir = '../full_21-01-17'\n",
+    "tank_dir = None # os.path.join(tracking_dir,'../full_21-01-17') # \n",
     "\n",
-    "for input_file,D in list(input_dict.items())[:]:\n",
-    "    logging.info(input_file)\n",
+    "for D in input_list:\n",
+    "    logging.info(D['trial_name'])\n",
     "    \n",
     "    f = os.path.join(D['output_dir'],f'tank.pik')\n",
     "    if os.path.exists(f):\n",
@@ -263,7 +181,7 @@
     "#     except:\n",
     "#         pass\n",
     "    \n",
-    "    tracker = Tracker(input_video=input_file, **D)\n",
+    "    tracker = Tracker(**D)\n",
     "    tracker.init_video_input()\n",
     "    tracker.init_background()\n",
     "    tracker.release()\n",
@@ -274,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,21 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "../raw_videos2/videos/Pa_sat_7dpf_GroupA_n2a_202104171441.avi\n",
-      "     Done                                                                                                                                                                                               ../raw_videos2/videos/sf_wed_7dpf_groupA_n2_202104141325.avi\n",
-      "     Done                                                                                                                                                                                               "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tracker\n",
     "reload(tracker.utils)\n",
@@ -308,12 +216,11 @@
     "from tracker.tracker import Tracker\n",
     "\n",
     "\n",
-    "def track(input_file):\n",
-    "    settings = input_dict[input_file]\n",
+    "def track(settings):\n",
     "    globals().update(settings)\n",
     "    utils.add_log_file(os.path.join(output_dir,'log.txt'))\n",
     "    logging.info(utils.parindent+'Initializing')\n",
-    "    tracker = Tracker(input_video=input_file, **settings)\n",
+    "    tracker = Tracker(**settings)\n",
     "    tracker.init_all()\n",
     "    tracker.save_settings()\n",
     "    try:\n",
@@ -327,7 +234,7 @@
     "                t = str(datetime.datetime.now()).split('.')\n",
     "                logging.info(utils.parindent + f'Tracking: {tracker.get_current_timestamp()}, ' +\n",
     "                             f'{tracker.get_percent_complete():4.1f}% complete, {t[0]}.{t[1][:2]}' )\n",
-    "            if not tracker.track_next_frame(save_frames=False):\n",
+    "            if not tracker.track_next_frame():\n",
     "                raise Exception(f'Could not read frame {i_frame}.')\n",
     "        tracker.release()\n",
     "        logging.info(utils.parindent+'Saving')\n",
@@ -339,28 +246,25 @@
     "        for info in sys.exc_info():\n",
     "            logging.warning(info)\n",
     "        %tb\n",
-    "    # Should close the log file handle here.\n",
+    "    utils.reset_logging()\n",
     "    return\n",
     "\n",
     "\n",
-    "# Multi-threading doesn't work in Windows. If the OS is Windows, set n_thread to 1.\n",
-    "n_threads = 1 if 'windows' in platform.system().lower() else 1\n",
-    "\n",
-    "if n_threads==1:\n",
-    "    for input_file in input_dict.keys():\n",
+    "n_threads = 1\n",
+    "# This multi-threading does not work in Windows. \n",
+    "# If the OS is Windows, use a single thread.\n",
+    "if n_threads==1 or ('windows' in platform.system().lower()):\n",
+    "    for settings in input_list:\n",
     "        utils.reset_logging()\n",
-    "        utils.add_log_stream(sys.stdout)\n",
-    "        logging.info(input_file)\n",
-    "        handler = logging.root.handlers[-1]\n",
-    "        handler.terminator = ''\n",
-    "        handler.setFormatter(logging.Formatter('\\r'+' '*200+'\\r     %(message)s'))\n",
-    "        track(input_file)\n",
+    "        utils.add_log_stream(sys.stdout, overwrite=True)\n",
+    "        logging.info(settings['input_video']+'\\n')\n",
+    "        track(settings)\n",
     "else:\n",
-    "    def track_(k):\n",
+    "    def track_(settings):\n",
     "        utils.reset_logging()\n",
-    "        return track(k)\n",
+    "        return track(settings)\n",
     "    pool = multiprocessing.Pool(n_threads)\n",
-    "    pool.map(track_,input_dict.keys())"
+    "    pool.map(track_,input_list)"
    ]
   },
   {
@@ -379,13 +283,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# trial_files = glob(os.path.join(tracking_dir,'*/trial.pik'))\n",
-    "trial_files = glob(os.path.join(tracking_dir,'Pa_Mon_7dpf_GroupA_n5_20200706_1140/trial.pik'))\n",
-    "# display(trial_files)\n",
+    "trial_files = glob(os.path.join(tracking_dir,'*/trial.pik'))\n",
+    "# trial_files = glob(os.path.join(tracking_dir,'Pa_Mon_7dpf_GroupA_n5_20200706_1140/trial.pik'))\n",
+    "display(trial_files)\n",
     "\n",
     "trial_file = trial_files[0]\n",
     "trial = utils.load_pik(trial_file)\n",
-    "print(trial_file)\n",
+    "# print(trial_file)\n",
     "data,frames = trial['data'],trial['frame_list']\n",
     "\n",
     "xy = trial['data'][:,:trial['n_ind'],:2]\n",
