- Added method Tracker.track_video to track an entire video. Previously that was done explicitely in "track.ipynb".
- Split "track.ipynb" into a single-video notebook ("track.ipynb") and a batch-tracking notebook ("track_batch.ipynb").

- Renamed the module directory from "tracker" to "trilabtracker" to avoid confusion between the module and Tracker objects. "trilabtracker" still contains a submodule called "tracker", however it never needs to be imported explicitly as all its contents are pre-imported by the __init__ file.

- Reorganized some imports and functions to make common commands, including starting the viewer, available by simply importing "trilabtracker".

- Added a settings file for Red's seizure project.

--- a/track.ipynb
+++ b/track.ipynb
@@ -16,22 +16,13 @@
     "import logging\n",
     "import multiprocessing\n",
     "from glob import glob\n",
-    "from fnmatch import fnmatch\n",
-    "from tracker.tank import Tank\n",
-    "from tracker.tracker import Tracker\n",
-    "from tracker import utils\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import flatten_dict\n",
+    "import trilabtracker as tt\n",
+    "# import numpy as np\n",
+    "# import pandas as pd\n",
     "\n",
-    "import tracker\n",
-    "reload(tracker.utils)\n",
-    "from tracker import utils\n",
-    "reload(tracker.tank)\n",
-    "from tracker.tank import Tank\n",
-    "reload(tracker.tracker)\n",
-    "from tracker.tracker import Tracker"
+    "# import trilabtracker\n",
+    "# reload(trilabtracker)\n",
+    "# import trilabtracker as tt"
    ]
   },
   {
@@ -40,117 +31,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Select an output directory, a set of input files (videos to track), \n",
-    "    and a settings file. '''\n",
+    "# Video to track.\n",
+    "input_file   = '../raw_videos2/videos/Pa_sat_7dpf_GroupA_n2a_202104171441.avi'\n",
     "\n",
-    "tracking_dir = 'output'\n",
+    "# Store output in this directory, in a subdirectory named after the video.\n",
+    "tracking_dir = 'output2'\n",
     "\n",
-    "input_files = sorted(glob('../raw_videos2/videos/*.avi'))\n",
-    "# input_files = [ '../raw_videos2/videos/pa_wed_28dpf_groupA_n5_202104281846.avi' ]\n",
-    "input_files = [input_files[i] for i in [0,2]]\n",
+    "# # Load predefined settings...\n",
+    "# filtered_settings = tt.load_filtered_settings('settings/larval-schooling-2.xlsx')\n",
+    "# ..or define your own.\n",
+    "settings = dict( t_start = 0, t_end = -1, n_extra = 1, n_report = 100, \n",
+    "                 n_blur = 5, block_size = 31, threshold_offset = 13, \n",
+    "                 min_area = 20, max_area = 800, ideal_area = 150, \n",
+    "                 max_aspect = 15, ideal_aspect = 8, area_penalty = 0.5, \n",
+    "                 morph_transform = [], reversal_threshold = None, \n",
+    "                 bkg = dict( t_start = 0, t_end = -1, n_training_frames = 100, \n",
+    "                             contrast_factor = 5, secondary_subtraction = True,\n",
+    "                             secondary_factor = 1 )\n",
+    "                ) \n",
     "\n",
-    "filtered_settings = utils.load_filtered_settings('settings/larval-schooling-2.xlsx')\n",
+    "# Extract trial name and number of fish from the video file's path.\n",
+    "d,fn       = os.path.split(input_file)\n",
+    "fn,ext     = os.path.splitext(fn)\n",
+    "output_dir = os.path.join(tracking_dir,fn)\n",
+    "n_ind      = int(re.findall('_n(\\d+)[^\\d]*_',fn)[0])\n",
     "\n",
-    "input_list = []\n",
-    "for input_file in input_files:\n",
-    "#     print(input_file)\n",
-    "    d,fn       = os.path.split(input_file)\n",
-    "    fn,ext     = os.path.splitext(fn)\n",
-    "    output_dir = os.path.join(tracking_dir,fn)\n",
-    "    n_ind      = int(re.findall('_n(\\d+)[^\\d]*_',fn)[0])\n",
-    "    \n",
-    "#     # If a repaired version exists, use that instead.\n",
-    "#     repaired_file = os.path.join(d,'repaired',fn+'-repaired'+ext)\n",
-    "#     input_file = repaired_file if os.path.exists(repaired_file) else input_file\n",
-    "    \n",
-    "#     # If a trial file already exists, skip.\n",
-    "#     if os.path.exists(os.path.join(output_dir,'trial.pik')):\n",
-    "#         continue\n",
-    "    \n",
-    "    settings = utils.apply_filtered_settings(filtered_settings, fn)\n",
-    "    settings.update( input_video=input_file, output_dir=output_dir, \n",
-    "                     n_ind=n_ind, trial_name=fn )\n",
-    "    input_list.append(settings)\n",
-    "\n",
-    "print(f'{len(input_list)}/{len(input_files)}')\n",
-    "\n",
-    "# if len(input_dict)<10:\n",
-    "for D in input_list:\n",
-    "    print(D['trial_name'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import tracker\n",
-    "reload(tracker.utils)\n",
-    "from tracker import utils\n",
-    "reload(tracker.tank)\n",
-    "from tracker.tank import Tank\n",
-    "reload(tracker.tracker)\n",
-    "from tracker.tracker import Tracker\n",
-    "\n",
-    "''' Create output directories. Import or compute backgrounds. '''\n",
-    "\n",
+    "# Create tracker. Compute background. Detect tank interactively.\n",
+    "settings = tt.apply_filtered_settings(filtered_settings, fn)\n",
+    "settings.update( input_video=input_file, output_dir=output_dir, \n",
+    "                 n_ind=n_ind, trial_name=fn )\n",
     "if not os.path.exists(tracking_dir):\n",
     "    os.mkdir(tracking_dir)\n",
+    "tt.reset_logging()\n",
+    "tt.add_log_stream(sys.stdout, overwrite=True)\n",
+    "logging.info(settings['input_video']+'\\n')\n",
+    "tracker = tt.Tracker(**settings)\n",
+    "tracker.init_all()\n",
     "\n",
-    "# If not None, look for pre-existing backgrounds in bkg_dir.\n",
-    "bkg_dir = os.path.relpath(os.path.join(tracking_dir,'../full_21-01-17')) # None # \n",
+    "# # Run tracker.\n",
+    "tracker.track_video()\n",
     "\n",
-    "for D in input_list:\n",
-    "    utils.overprint(D['trial_name'])\n",
-    "#     print(D['trial_name'])\n",
-    "    tracker = Tracker(**D)\n",
-    "    \n",
-    "    # Create output directory.\n",
-    "    tracker.init_directory()\n",
-    "    tracker.save_settings()\n",
-    "    \n",
-    "    # Create a link to the input video in the output directory.\n",
-    "    # In windows, this requires special privileges.\n",
-    "    # Instead, write the path to the video in a text file which\n",
-    "    # the viewer can use to locate the video.\n",
-    "    input_link     = os.path.join(D['output_dir'],'raw'+ext)\n",
-    "    relative_input = os.path.relpath(input_file, D['output_dir'])\n",
-    "    if not os.path.exists(input_link):\n",
-    "        try:\n",
-    "            input_link = os.path.join(D['output_dir'], 'raw'+ext)\n",
-    "            os.symlink(relative_input, input_link)\n",
-    "        except:\n",
-    "#         if 'windows' in platform.system().lower():\n",
-    "            input_link = os.path.join(D['output_dir'], 'raw.txt')\n",
-    "            with open(input_link, 'r') as fh:\n",
-    "                fh.write(relative_input)\n",
-    "    \n",
-    "    # If background file(s) already exist, don't do anything.\n",
-    "    b  = D['bkg.secondary_subtraction']\n",
-    "    f1 = os.path.join(tracker.output_dir,'background.npz')\n",
-    "    f2 = os.path.join(tracker.output_dir,'background2.npz')\n",
-    "    if os.path.exists(f1) and ( (not b) or os.path.exists(f2) ):\n",
-    "        continue\n",
-    "    # If background file exists in bkg_dir, use it.\n",
-    "    try:\n",
-    "        d = os.path.join(bkg_dir,D['trial_name'])\n",
-    "        for i in ['']: #,'2']:\n",
-    "            for e in ['npz','png']:\n",
-    "                f1 = os.path.join(d,f'background{i}.{e}')\n",
-    "                f2 = os.path.join(D['output_dir'],f'background{i}.{e}')\n",
-    "                shutil.copy2(f1,f2)\n",
-    "    except:\n",
-    "        pass\n",
-    "    # Otherwise, compute background.\n",
-    "    tracker.init_video_input()\n",
-    "    tracker.init_background()\n",
-    "    tracker.init_secondary_background()\n",
-    "    tracker.release()\n",
-    "\n",
-    "print('\\nDone')"
+    "tt.reset_logging()"
    ]
   },
   {
@@ -159,146 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Trace tanks. '''\n",
-    "\n",
-    "# If not None, look for pre-existing tanks in tank_dir.\n",
-    "tank_dir = None # os.path.join(tracking_dir,'../full_21-01-17') # \n",
-    "\n",
-    "for D in input_list:\n",
-    "    logging.info(D['trial_name'])\n",
-    "    \n",
-    "    f = os.path.join(D['output_dir'],f'tank.pik')\n",
-    "    if os.path.exists(f):\n",
-    "        continue\n",
-    "    \n",
-    "#     try:\n",
-    "#         d = os.path.join(tank_dir,D['trial_name'])\n",
-    "#         for e in ['pik','png']:\n",
-    "#             f2 = os.path.join(D['output_dir'],f'tank.{e}')\n",
-    "#             if not os.path.exists(f2):\n",
-    "#                 f1 = os.path.join(d,f'tank.{e}')\n",
-    "#                 shutil.copy2(f1,f2)\n",
-    "#     except:\n",
-    "#         pass\n",
-    "    \n",
-    "    tracker = Tracker(**D)\n",
-    "    tracker.init_video_input()\n",
-    "    tracker.init_background()\n",
-    "    tracker.release()\n",
-    "    tracker.init_tank(thresh=4,dilate=20)\n",
-    "\n",
-    "print('Done')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import tracker\n",
-    "reload(tracker.utils)\n",
-    "from tracker import utils\n",
-    "reload(tracker.tank)\n",
-    "from tracker.tank import Tank\n",
-    "reload(tracker.tracker)\n",
-    "from tracker.tracker import Tracker\n",
-    "\n",
-    "\n",
-    "def track(settings):\n",
-    "    globals().update(settings)\n",
-    "    utils.add_log_file(os.path.join(output_dir,'log.txt'))\n",
-    "    logging.info(utils.parindent+'Initializing')\n",
-    "    tracker = Tracker(**settings)\n",
-    "    tracker.init_all()\n",
-    "    tracker.save_settings()\n",
-    "    try:\n",
-    "        logging.info(utils.parindent+'Starting to track')\n",
-    "        tracker.set_frame(tracker.frame_start)\n",
-    "        n_report = max(1,int((tracker.frame_end-tracker.frame_start)/100))\n",
-    "        for i_frame in range(tracker.frame_start, tracker.frame_end):\n",
-    "            if (i_frame-tracker.frame_start)%n_report==0:\n",
-    "                tracker.save_trial()\n",
-    "                percent = (i_frame-tracker.frame_start)/(tracker.frame_end-tracker.frame_start)\n",
-    "                t = str(datetime.datetime.now()).split('.')\n",
-    "                logging.info(utils.parindent + f'Tracking: {tracker.get_current_timestamp()}, ' +\n",
-    "                             f'{tracker.get_percent_complete():4.1f}% complete, {t[0]}.{t[1][:2]}' )\n",
-    "            if not tracker.track_next_frame():\n",
-    "                raise Exception(f'Could not read frame {i_frame}.')\n",
-    "        tracker.release()\n",
-    "        logging.info(utils.parindent+'Saving')\n",
-    "        tracker.save_trial()\n",
-    "        logging.info(utils.parindent+'Done')\n",
-    "    except:\n",
-    "        tracker.release()\n",
-    "        logging.info('Failed')\n",
-    "        for info in sys.exc_info():\n",
-    "            logging.warning(info)\n",
-    "        %tb\n",
-    "    utils.reset_logging()\n",
-    "    return\n",
-    "\n",
-    "\n",
-    "n_threads = 1\n",
-    "# This multi-threading does not work in Windows. \n",
-    "# If the OS is Windows, use a single thread.\n",
-    "if n_threads==1 or ('windows' in platform.system().lower()):\n",
-    "    for settings in input_list:\n",
-    "        utils.reset_logging()\n",
-    "        utils.add_log_stream(sys.stdout, overwrite=True)\n",
-    "        logging.info(settings['input_video']+'\\n')\n",
-    "        track(settings)\n",
-    "else:\n",
-    "    def track_(settings):\n",
-    "        utils.reset_logging()\n",
-    "        return track(settings)\n",
-    "    pool = multiprocessing.Pool(n_threads)\n",
-    "    pool.map(track_,input_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "trial_files = glob(os.path.join(tracking_dir,'*/trial.pik'))\n",
-    "# trial_files = glob(os.path.join(tracking_dir,'Pa_Mon_7dpf_GroupA_n5_20200706_1140/trial.pik'))\n",
-    "display(trial_files)\n",
-    "\n",
-    "trial_file = trial_files[0]\n",
-    "trial = utils.load_pik(trial_file)\n",
-    "# print(trial_file)\n",
-    "data,frames = trial['data'],trial['frame_list']\n",
-    "\n",
-    "xy = trial['data'][:,:trial['n_ind'],:2]\n",
-    "xy[:,0,:].shape\n",
-    "for i in range(xy.shape[1]):\n",
-    "    plt.plot(*xy[:,i,:].T,label=f'{i}')\n",
-    "plt.legend(loc=(1.05,0.5))\n",
-    "plt.axis('equal')\n",
-    "plt.show()"
+    "tt.start_gui(tracker.output_dir)"
    ]
   },
   {
