Fixed some Windows 10 and openCV-3 bugs:
- Fixed an openCV-3 bug: Added "[-2:]" trick to findContours in tank.py to make it compatible with openCV versions 3 as well as 4.

- Fixed a Windows 10 bug: The "raw.txt" file standing in for the symbolic link to the video in the output directory now write itself correctly, and the viewer is able to read it to locate the video.

--- a/track.ipynb
+++ b/track.ipynb
@@ -32,23 +32,23 @@
    "outputs": [],
    "source": [
     "# Video to track.\n",
-    "input_file   = '../raw_videos2/videos/Pa_sat_7dpf_GroupA_n2a_202104171441.avi'\n",
+    "input_file   = '../videos/Pa_sat_7dpf_GroupA_n2a_202104171441.avi'\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
-    "tracking_dir = 'output2'\n",
+    "tracking_dir = 'output'\n",
     "\n",
-    "# # Load predefined settings...\n",
-    "# filtered_settings = tt.load_filtered_settings('settings/larval-schooling-2.xlsx')\n",
-    "# ..or define your own.\n",
-    "settings = dict( t_start = 0, t_end = -1, n_extra = 1, n_report = 100, \n",
-    "                 n_blur = 5, block_size = 31, threshold_offset = 13, \n",
-    "                 min_area = 20, max_area = 800, ideal_area = 150, \n",
-    "                 max_aspect = 15, ideal_aspect = 8, area_penalty = 0.5, \n",
-    "                 morph_transform = [], reversal_threshold = None, \n",
-    "                 bkg = dict( t_start = 0, t_end = -1, n_training_frames = 100, \n",
-    "                             contrast_factor = 5, secondary_subtraction = True,\n",
-    "                             secondary_factor = 1 )\n",
-    "                ) \n",
+    "# Load predefined settings...\n",
+    "settings = tt.load_filtered_settings('settings/larval-schooling-2.xlsx')['*']\n",
+    "# # ..or define your own.\n",
+    "# settings = dict( t_start = 0, t_end = -1, n_extra = 1, n_report = 100, \n",
+    "#                  n_blur = 5, block_size = 31, threshold_offset = 13, \n",
+    "#                  min_area = 20, max_area = 800, ideal_area = 150, \n",
+    "#                  max_aspect = 15, ideal_aspect = 8, area_penalty = 0.5, \n",
+    "#                  morph_transform = [], reversal_threshold = None, \n",
+    "#                  bkg = dict( t_start = 0, t_end = -1, n_training_frames = 100, \n",
+    "#                              contrast_factor = 5, secondary_subtraction = True,\n",
+    "#                              secondary_factor = 1 )\n",
+    "#                ) \n",
     "\n",
     "# Extract trial name and number of fish from the video file's path.\n",
     "d,fn       = os.path.split(input_file)\n",
@@ -57,7 +57,7 @@
     "n_ind      = int(re.findall('_n(\\d+)[^\\d]*_',fn)[0])\n",
     "\n",
     "# Create tracker. Compute background. Detect tank interactively.\n",
-    "settings = tt.apply_filtered_settings(filtered_settings, fn)\n",
+    "# settings = tt.apply_filtered_settings(filtered_settings, fn)\n",
     "settings.update( input_video=input_file, output_dir=output_dir, \n",
     "                 n_ind=n_ind, trial_name=fn )\n",
     "if not os.path.exists(tracking_dir):\n",
@@ -66,12 +66,23 @@
     "tt.add_log_stream(sys.stdout, overwrite=True)\n",
     "logging.info(settings['input_video']+'\\n')\n",
     "tracker = tt.Tracker(**settings)\n",
-    "tracker.init_all()\n",
+    "# tracker.init_all()\n",
     "\n",
     "# # Run tracker.\n",
-    "tracker.track_video()\n",
+    "# tracker.track_video()\n",
     "\n",
     "tt.reset_logging()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "tt.start_gui(tracker.output_dir)"
    ]
   },
   {
@@ -80,7 +91,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tt.start_gui(tracker.output_dir)"
+    "# import matplotlib.pyplot as plt\n",
+    "\n",
+    "# trial = tt.load_trial('output/Pa_sat_7dpf_GroupA_n2a_202104171441/trial.pik')\n",
+    "# xy = trial['data'][:,:,:2]\n",
+    "# for i in range(xy.shape[1]):\n",
+    "#     plt.plot(*xy[:,i,:2].T)"
    ]
   },
   {
@@ -93,9 +109,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (main)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "main"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -107,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
