Remove leftover print statement from interactive tank detection.

--- a/track_batch.ipynb
+++ b/track_batch.ipynb
@@ -41,10 +41,10 @@
    "outputs": [],
    "source": [
     "# Videos to track.\n",
-    "input_files  = sorted(glob('../raw_videos2/videos/*_7dpf_*.avi'))\n",
+    "input_files  = sorted(glob('../raw_videos2/videos/*dpf_*.mp4'))\n",
     "\n",
     "# Store output in this directory, in a subdirectory named after the video.\n",
-    "tracking_dir = 'output2'\n",
+    "tracking_dir = 'output'\n",
     "\n",
     "# Load settings.\n",
     "filtered_settings = tt.load_filtered_settings('settings/larval-schooling-2.xlsx')\n",
@@ -82,7 +82,6 @@
     "    settings_list.append(settings)\n",
     "\n",
     "# print(f'{len(settings_list)}/{len(input_files)}')\n",
-    "# if len(input_dict)<10:\n",
     "for settings in settings_list:\n",
     "    print(settings['trial_name'])"
    ]
@@ -236,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preview output."
+    "## View output."
    ]
   },
   {
